--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ body
 #fusion
 {
     background: #121315;
-    border-top: 1px solid #fff;
 }
 .fusion-row
 {
@@ -199,4 +198,222 @@ body
 {
     margin: 100px 0 120px;
     text-align: center;
+}
+
+
+
+/* Sekcja streng */
+#streng
+{
+    background: #1E2123;
+}
+.streng-con
+{
+    margin: 140px auto;
+}
+.streng-1, .streng-2, .streng-3, .streng-4
+{
+
+}
+.streng-1
+{
+    background-image: url('../img/streng/str1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.streng-2
+{
+    background-image: url('../img/streng/str2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.streng-3
+{
+    background-image: url('../img/streng/str3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.streng-4
+{
+    background-image: url('../img/streng/str4.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.streng-text
+{
+    margin: 230px auto 0;
+    color: #fff;
+    text-align: center;
+}
+.streng-text .text-1
+{
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.streng-text .text-2
+{
+    font-size: 16px;
+    font-weight: 300;
+    margin: 30px 20px 0;
+}
+
+
+/* Sekcja trainers */
+#trainers
+{
+    background: #1E2123;
+    
+}
+.row-t
+{
+    display: flex;
+    justify-content: center;
+    margin: 30px auto 70px;
+}
+.trainers-col
+{
+    flex: 1;
+    text-align: center;
+    margin: 100px 20px;
+    background: #25292B;
+    color: #fff;
+    
+}
+.trainers-img img
+{
+    width: 100%;
+}
+.trainers-text
+{
+    font-size: 24px;
+    font-weight: 700;
+    margin: 30px auto;
+}
+.trainers-text-2
+{
+    color: #747474;
+    line-height: 30px;
+}
+.trainers-down
+{
+    padding: 15px;
+}
+.trainers-social
+{
+    margin: 40px auto 30px;
+    padding: 15px;
+}
+.trainers-social .fa
+{
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    padding-top: 10px;
+    color: #fff;
+    background: #1E2123;
+    margin: 0 5px;
+}
+.trainers-social .fa:hover
+{
+    color: #EE6059;
+}
+
+
+/* Sekcja ali */
+#ali
+{
+    background-image: url('../img/ali2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.ali-text
+{
+    margin: 150px auto 70px;
+    position: relative;
+    color: #fff;
+}
+.ali-text-1
+{
+    font-size: 36px;
+    letter-spacing: 1px;
+    margin: 0 auto 80px;
+}
+.ali-text-1:after
+{
+    content: "\f005 \f005";
+    font-family: FontAwesome;
+    color: #EE6059;
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    transform: translate(-50%, -50%); 
+    font-size: 28px; 
+}
+.ali-text-2
+{
+    text-transform: uppercase;
+    font-size: 22px; 
+}
+
+
+/* Sekcja result */
+#result
+{
+    background: #25292B;
+}
+.row-r
+{
+    display: flex;
+    justify-content: center;
+}
+.title-1
+{
+    margin-top: 130px;
+}
+.result-left-1, .result-right-1
+{
+    margin: 100px auto;
+    
+}
+.result-right-1, .result-left-2
+{
+    background: #1E2123;
+}
+.result-left-1 img, .result-right-2 img
+{
+    width: 100%;
+}
+.result-text
+{
+    margin: 130px 60px 40px;
+}
+.result-text-1
+{
+    font-size: 26px;
+    line-height: 44px;
+    margin-bottom: 40px;
+    color: #fff;
+}
+.result-text-2
+{
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    color: #fff;
+}
+.result-text-3
+{
+    color: #EE6059;
+    font-size: 24px;
+    margin-top: 20px;
+}
+.row-r:last-child
+{
+    margin-bottom: 100px;
 }
