--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -65,6 +65,16 @@
     {
         font-size: 20px;
     }
+    .goals-text-1
+    {
+    font-size: 28px;
+    text-align: center;
+    }
+    .goals-text-2
+    {
+    font-size: 16px;
+    text-align: center;
+    }
 }
 
 
@@ -181,5 +191,15 @@
     {
         font-size: 20px;
         margin-top: 20px;
+    }
+    .goals-text-1
+    {
+    font-size: 28px;
+    text-align: center;
+    }
+    .goals-text-2
+    {
+    font-size: 14px;
+    text-align: center;
     }
 }
