--- a/css/style.css
+++ b/css/style.css
@@ -417,3 +417,41 @@ body
 {
     margin-bottom: 100px;
 }
+
+
+/* Sekcja goals */
+.row-g
+{
+    margin: 80px auto;
+}
+#goals
+{
+    background: #D05F59;
+}
+.goals-text
+{
+    color: #fff;
+    
+}
+.goals-text-1
+{
+    font-size: 34px;
+    font-weight: 700;
+}
+.goals-text-2
+{
+    font-size: 18px;
+    letter-spacing: 0.5px;
+}
+.btn-goals
+{
+    width: 220px;
+    height: 60px;
+    border: 1px solid #fff;
+    box-shadow: none;
+    background: transparent;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-top: 20px;
+}
