--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -300,4 +300,12 @@
     {
         font-size: 18px; 
     }
+     .streng-text .text-1
+    {
+        font-size: 28px;
+    }
+    .streng-text .text-2
+    {
+        font-size: 14px;
+    }
 }
